# projeto-escalada

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
docs/1. Projeto/: 1.Projeto.P3.DDL.sql  1.Projeto.P3.DML.Avisos.sql  1.Projeto.P3.DML.Usuarios.sql  P1. Projeto conceitual-lógico.md  P2. Projeto físico.md  P3. Implantação.md
docs/2. Aplicação/: 1. Protótipo de telas e código SQL associado.md  1.prototipo-de-telas.f0  2. Sub-rotinas de suporte.md
docs/3. Governança/: P2.  Acesso e privacidade.md
docs/3. Governança/P1. Documentos de gestão de dados/: 1. Política-de-Backup.md  2. MAD.md  3. Política-de-Acesso-e-privacidade.md
docs/4. BI/: P1. Perguntas analíticas.md  P2. Relatórios ou dashboards.md
docs/P1/1. Projeto/: 1.Projeto.P3.DML.Avisos.sql  1.Projeto.P3.DML.Usuarios.sql  P1. Projeto conceitual-lógico.md
docs/P1/2. Aplicação/: 1. Protótipo de telas e código SQL associado.md  2. Sub-rotinas de suporte.md
docs/P1/3. Governança/: P2.  Acesso e privacidade.md
docs/P1/4. BI/: P2. Relatórios ou dashboards.md
docs/P2/: export.sh  mdb-query-timer.sh  psql-query-timer.sh
docs/P2/CSVs/: mdb_input_queries.csv  psql_input_queries.csv
src/: config.py
src/database/: __init__.py  repository.py  session.py
src/database/alembic/: env.py
src/database/models/: autor.py  autor_musica.py  aviso.py  categoria.py  edicao_dashboard.py  foto.py  foto_edicao_dashboard.py  gerar_acesso_admin.py  musica.py  notificacao.py  solicitacoes_de_musica.py  usuario.py  usuario_aviso.py  (+1 more)
src/utils/: enums.py
(+6 files in other folders)
