[tool.poetry]
name = "projeto-escalada"
version = "1.9.0"
description = ""
authors = ["Tauane Sales <tauanesales@ufba.br>"]

[tool.poetry.dependencies]
python = "~3.9"
fastapi-cache2 = "^0.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
strenum = "^0.4.15"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
